# vibe

./: .gitignore  21-UAT.md  CLAUDE.md  Cargo.toml  DELIVERY.md  README.md  gemini-extension.json
.agents/plugins/: codex-marketplace.json  marketplace.json
.github/workflows/: release.yml
.planning/: 1-CONTEXT.md  3-CONTEXT.md  4-CONTEXT.md  5-CONTEXT.md  6-CONTEXT.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v4.0-REQUIREMENTS.md  v4.0-ROADMAP.md
.planning/phases/: 03-RESEARCH.md  1-RESEARCH.md  14-CONTEXT.md  17-01-PLAN.md  17-01-SUMMARY.md  17-02-PLAN.md  17-02-SUMMARY.md  17-03-PLAN.md  17-03-SUMMARY.md  17-CONTEXT.md  17-RESEARCH.md  18-01-PLAN.md  18-02-PLAN.md  18-03-PLAN.md  18-CONTEXT.md  19-CONTEXT.md  22-RESEARCH.md  22-VERIFICATION.md  23-01-PLAN.md  23-01-SUMMARY.md  23-02-PLAN.md  23-02-SUMMARY.md  23-03-PLAN.md  23-04-PLAN.md  23-CONTEXT.md  23-RESEARCH.md  23-VALIDATION.md  23-VERIFICATION.md  24-01-PLAN.md  24-01-SUMMARY.md  24-02-PLAN.md  24-03-PLAN.md  24-CONTEXT.md  24-RESEARCH.md  24-VALIDATION.md  24-VERIFICATION.md  27-RESEARCH.md  28-01-SUMMARY.md  28-02-PLAN.md
.planning/phases/01-terminal-orchestration-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md
.planning/phases/02-monorepo-transition/: 02-01-PLAN.md  02-01-SUMMARY.md
.planning/phases/03-state-persistence-ipc/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md
.planning/phases/04-intent-injection-hitl/: 04-01-PLAN.md  04-01-SUMMARY.md
.planning/phases/05-output-monitoring-lifecycle-safety/: 05-01-PLAN.md  05-01-SUMMARY.md
.planning/phases/06-status-dashboard-ux/: 06-01-PLAN.md  06-01-SUMMARY.md
.planning/phases/07-ai-skill-integration/: 07-01-PLAN.md  07-01-SUMMARY.md  07-SUMMARY.md
.planning/phases/08-production-infrastructure/: 08-01-PLAN.md  08-01-SUMMARY.md
.planning/phases/09-interactive-workflow-orchestration/: 09-01-PLAN.md  09-02-PLAN.md  09-03-PLAN.md  09-04-PLAN.md  09-05-PLAN.md  09-05-SUMMARY.md  09-CONTEXT.md  09-DISCUSSION-LOG.md  09-RESEARCH.md  09-VALIDATION.md  09-VERIFICATION.md
.planning/phases/10-vibe-cli-core-skill-definition/: 10-01-PLAN.md  10-02-PLAN.md  10-03-PLAN.md  10-CONTEXT.md  10-DISCUSSION-LOG.md  10-RESEARCH.md  10-VERIFICATION.md
.planning/phases/11-multi-model-sop-verification/: 11-01-PLAN.md  11-01-SUMMARY.md  11-02-PLAN.md  11-02-SUMMARY.md  11-03-PLAN.md  11-CONTEXT.md  11-DISCUSSION-LOG.md  11-RESEARCH.md  11-VERIFICATION.md
.planning/phases/12-workflow-templates-optimization/: 12-01-PLAN.md  12-01-SUMMARY.md  12-02-PLAN.md  (+7 more)
.planning/research/: AGENT_BUS_IMPLEMENTATION.md  ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  WINDOWS_COMPATIBILITY.md
.vibe/: config.json
.vibe/roles/: Conductor.md  Evaluator.md  Worker.md
.vibe/state/: panes.json
apps/vibe-cli/: Cargo.toml
apps/vibe-cli/src/: main.rs  mcp.rs  tui.rs
crates/vibe-core/: Cargo.toml
crates/vibe-core/.vibe/state/: panes.json
crates/vibe-core/src/: env.rs  error.rs  lib.rs
crates/vibe-core/src/adapter/: encoder.rs  mod.rs  tmux.rs  wezterm.rs
crates/vibe-core/src/ipc/: bus.rs  client.rs  mod.rs  protocol.rs  server.rs
crates/vibe-core/src/os/: mod.rs  shell.rs  unix.rs  windows.rs
crates/vibe-core/src/state/: db.rs  mod.rs  plans.rs  schema.sql
crates/vibe-core/tests/: concurrency_test.rs
docs/: DISTRIBUTION.md  README.md
plugin/vibe/: README.md  gemini-extension.json  mcp-server.js  package-lock.json  package.json
scripts/: e2e_test.sh  install.ps1  install.sh  test-conductor.js  verify_phase17.sh  verify_phase18.sh
skills/: README.md
skills/vibe-operator/: SKILL.md  SKILL.yaml  benchmarks.md  role.md
src/: env.rs  error.rs  main.rs
src/adapter/: mod.rs
src/os/: mod.rs  windows.rs
(+176 files in other folders)
