[workspace]
resolver = "2"
members = ["apps/*", "crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Anjia"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
dirs = "5.0"
which = "6.0"
clap = { version = "4.5", features = ["derive"] }
vibe-core = { path = "crates/vibe-core" }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
