[workspace]
resolver = "2"
members = ["apps/*", "crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Anjia"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
futures = "0.3"
dirs = "5.0"
which = "6.0"
uuid = { version = "1.8", features = ["v4"] }
tokio-util = { version = "0.7", features = ["codec"] }
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
tempfile = "3.10"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
vibe-core = { path = "crates/vibe-core" }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
