[package]
name = "vibe-cli"
version.workspace = true
edition.workspace = true

[dependencies]
vibe-core.workspace = true
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
serde_json.workspace = true
ratatui.workspace = true
crossterm.workspace = true
