[package]
name = "vibe-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
which = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }
