[package]
name = "vibe-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
dirs = { workspace = true }
which = { workspace = true }
tokio-util = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[target."cfg(not(windows))".dependencies]
daemonize = "0.5.0"

[dev-dependencies]
tempfile = { workspace = true }
