[package]
name = "vibe-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
dirs = { workspace = true }
which = { workspace = true }
tokio-util = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
